# puku-markdown

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yaml  publish.yaml  pytest.yaml
pmark/: char_span.py  column_resolution.py  constants.py  line_span.py  pattern_metrics.py  pattern_predicates.py  re_patterns.py  safe_cast.py  tokens.py  utils.py
pmark/_utils/: constants.py  metrics.py  predicates.py  re_patterns.py
pmark/_utils/scanners/: __init__.py  link_destination.py  link_title.py
pmark/common/: constants.py  metrics.py  predicates.py  re_patterns.py
pmark/elements/: __init__.py  document.py
pmark/elements/block/: __init__.py  base.py
pmark/lexer/: block_state.py  rule_chains.py  states.py  tokenize.py
pmark/lexer/block/: column_resolution.py  command.py  frame.py  frame_spec.py  line_descriptor.py  rule.py  rule_chain.py  rule_chains.py  rule_chains_registry.py  rule_context.py  rule_locals.py  state.py  tokenize.py  type_aliases.py  upcall.py
pmark/parser/: parse.py
pmark/parser/block/: block_stream.py  command.py  frame.py  frame_actuals.py  frame_spec.py  line_descriptor.py  parse.py  rule.py  rule_chain.py  rule_chains_registry.py  rule_context.py  rule_locals.py  state.py  type_aliases.py
pmark/persistent_list/: __init__.py  change_set.py  core.py  modification.py  transaction.py  transactional_editor.py  transient.py
pmark/span_rope/: core.py  cursor.py
puku_markdown/: __init__.py  column_resolution.py
puku_markdown/_utils/: constants.py  metrics.py  predicates.py  re_patterns.py
puku_markdown/_utils/scanners/: __init__.py  link_destination.py  link_title.py
puku_markdown/elements/: __init__.py  base.py  document.py
puku_markdown/elements/block/: __init__.py  base.py
puku_markdown/parser/: __init__.py  parse.py
puku_markdown/parser/block/: block_stream.py  command.py  frame.py  frame_actuals.py  frame_spec.py  parse.py  rule.py  rule_chain.py  rule_chains_registry.py  rule_context.py  rule_locals.py  state.py  type_aliases.py  (+1 more)
puku_markdown/persistent_list/: __init__.py  core.py  modification.py  transactional_editor.py  transient.py  type_vars.py
puku_markdown/renderer/: __init__.py  element_handler.py  framed_element.py  frames.py  render.py  state.py  type_aliases.py
puku_markdown/renderers/: frames.py  text.py
tests/commonmark/: spec.md  spec.py  test_block_parser.py  test_text_renderer.py  update_spec.py
tests/markdown_it_py/: __init__.py  block_parse.py  block_token.py
(+92 files in other folders)
