[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "puku-markdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = [
    "markdown-it-py>=4.2.0",
    "pytest>=9.0.3",
    "requests>=2.34.2",
]
