[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "puku-markdown"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3.16",
]

[dependency-groups]
test = [
    "markdown-it-py>=4.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "requests>=2.34.2",
]